I like messing with code lol
- Pokémon follower sprites now use 4 frames instead of just 2, which allows for more complex animations.
- Pokémon follower sprites now only animate when moving and reset to the first frame when standing still (might need to tweak the animation speed to have it stop exactly on the first frame after the pokémon stopped moving)
- Modified the player sprites to use a 32x32 grid instead of a 24x24 grid so there's more space for things like surf blobs and fishing rods.
- Fixed a spelling error on a variable in the original code (AnimationDelayLength instead of AnimationDelaylenght)
- Replaced some GUI assets with more GBA looking ones.
- Added an initial design for the Corna (Pokémon Quartz's version of Hoenn) Town Map.
-Changed all occurences of the "Kolben" GameMode to "Quartz"

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -166,6 +166,9 @@
     <Content Include="Content\GUI\MainMenu\lugiaParticle.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\GUI\Map\corna_map.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Items\Fossils.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -6502,7 +6505,10 @@
     <Content Include="Content\Textures\NPC\PlayerSkins\Gold_GBA_Surf.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\NPC\PlayerSkins\Template_Surf.png">
+    <Content Include="Content\Textures\NPC\PlayerSkins\JAkira.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\NPC\PlayerSkins\JAkira_Surf.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\NPC\Pokeball.png">
