--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -23401,6 +23401,9 @@
     <Content Include="Content\Data\Maps\Johto\Cities\cherrygrove\2.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Data\Maps\hoenn\Cities\Oldale\Main.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="LICENSE" />
     <None Include="meta">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
