Replaced gbc styled textures of Littleroot Town. Route 101, the moving truck, the mart/center/gym turning sign and some of the gui with gba styled ones.

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -23395,6 +23395,15 @@
     <Content Include="Content\Data\Maps\hoenn\Cities\Oldale\Main.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Data\Maps\hoenn\Cities\Littleroot\OutsideTruck.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Maps\hoenn\Cities\Littleroot\Truck.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\yourroom.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="LICENSE" />
     <None Include="meta">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
