Textbox pops up faster now, fixed odd save screen font color, improved the "move to hoenn" events (including sound effects and lighting effects for the truck), added the command @screen.canbepaused to be able to control if the escape button can be pressed during events.

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -8811,6 +8811,9 @@
     <Content Include="Content\Sounds\Move_Deleted.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Sounds\MovingTruck.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Sounds\MovingTruck\Driving.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -8883,13 +8886,7 @@
     <Content Include="Content\Sounds\Use_Repel.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Sounds\Warp_Door_Regular.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\Sounds\Warp_Door_Slide.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\Sounds\Warp_General.wav">
+    <Content Include="Content\Sounds\Enter.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\battlefactory.png">
@@ -17548,12 +17545,6 @@
     <Content Include="Content\Data\Scripts\Johto\Cities\newbark\mary.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\mom.dat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\momdoor.dat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\Data\Scripts\Johto\Cities\newbark\no_pokemon.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -22114,9 +22105,6 @@
     <Content Include="Content\Data\Scripts\worldmap\roaming_regions.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Data\Scripts\worldmap\sevii islands.dat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\Data\Scripts\worldmap\SeviiIslands.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -23398,10 +23386,22 @@
     <Content Include="Content\Data\Maps\hoenn\Cities\Littleroot\OutsideTruck.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Data\Maps\hoenn\Cities\Littleroot\Truck.dat">
+    <Content Include="Content\Data\Scripts\hoenn\Cities\Littleroot\MovingTruckBox.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\yourroom.dat">
+    <Content Include="Content\Data\Maps\hoenn\Cities\Littleroot\InsideTruck.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Scripts\worldmap\hoenn.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\yourhouse\mom.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\yourhouse\momdoor.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Scripts\Johto\Cities\newbark\yourhouse\yourroom.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="LICENSE" />
